--- a/package.json
+++ b/package.json
@@ -24,5 +24,7 @@
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     },
-    "dependencies": {}
+    "dependencies": {
+        "select2": "^4.0.13"
+    }
 }
